--- a/src/simplelog.cfg
+++ b/src/simplelog.cfg
@@ -6,5 +6,7 @@ level=0
 buffsize=1000000
 #rotation_size(byte): size of each of log files, 10(MB)
 rotation_size=10000000
+#topic: Split log into multi topics, each topic is a file. Here is 3 topics.
+topic=sys,lib,exe
 #end_configuring: Put in end of this file to read configuring file no more
 end_configuring=1
