--- a/src/simplelog.cfg
+++ b/src/simplelog.cfg
@@ -1,14 +1,6 @@
 #pathfoder: the folder to write log
 pathfoder=log_simple
-#level:
-#define					SPL_LOG_BASE					0
-#define					SPL_LOG_DEBUG					1
-#define					SPL_LOG_INFO					2
-#define					SPL_LOG_WARNING					3
-#define					SPL_LOG_ERROR					4
-#define					SPL_LOG_FATAL					5
-#define					SPL_LOG_PEAK					6
-
+#level:SPL_LOG_BASE:0, SPL_LOG_DEBUG:1, SPL_LOG_INFO:2, SPL_LOG_WARNING:3, SPL_LOG_ERROR:4, SPL_LOG_FATAL:5, SPL_LOG_PEAK:6
 level=0
 #buffsize(byte): size of memory for simple log, 1(MB)
 buffsize=1000000
