--- a/src/linux/simplelog.cfg
+++ b/src/linux/simplelog.cfg
@@ -7,6 +7,6 @@ buffsize=1000000
 #rotation_size(byte): size of each of log files, 10(MB)
 rotation_size=10000000
 #topic: Split log into multi topics, each topic is a file. Here is 3 topics.
-topic=sys,lib,exe
+topic=sys,lib,exe,nayax,sksgn
 #end_configuring: Put in end of this file to read configuring file no more
 end_configuring=1
