Prepare for release.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,9 @@
 # Add main.cpp file of the project root directory as a source file
 project(simplelog_topic_project)
-set(SOURCE_LIB_FILES simplelog.c simplelog.h simplelog_config.h)
+set(SOURCE_LIB_FILES simplelog.c simplelog.h )
 set(SOURCE_BIN_FILES c_test/main.c)
 set(SOURCE_BINCPP_FILES cpp_test/main.cpp)
-set(SOURCE_BINCPP_FILES_DIRECT cpp_test/main.cpp simplelog.c simplelog.h simplelog_config.h)
+set(SOURCE_BINCPP_FILES_DIRECT cpp_test/main.cpp simplelog.c simplelog.h)
 
 # Add executable target with source files listed in SOURCE_FILES variable
 
