--- a/src/linux/Makefile
+++ b/src/linux/Makefile
@@ -2,7 +2,7 @@ target=libsimplelog.so
 debugFlag=-g -fPIC -Wall -shared 
 releaseFlag=-fPIC -Wall -shared
 LIBS+=-lpthread
-src=../simplelog.c ../simplelog.h ../simplelog_config.h
+src=../simplelog.c ../simplelog.h
 INC=-I../
 #CFLAGS=-ansi
 CFLAGS=-std=gnu89 -D UNIX_LINUX
