--- a/src/linux/simplelog.cfg
+++ b/src/linux/simplelog.cfg
@@ -3,10 +3,14 @@ pathfoder=log_simple
 #level:SPL_LOG_BASE:0, SPL_LOG_DEBUG:1, SPL_LOG_INFO:2, SPL_LOG_WARNING:3, SPL_LOG_ERROR:4, SPL_LOG_FATAL:5, SPL_LOG_PEAK:6
 level=0
 #buffsize(byte): size of memory for simple log, 1(MB)
-buffsize=1000000
+buffsize=2000000
 #rotation_size(byte): size of each of log files, 10(MB)
-rotation_size=10000000
+rotation_size=2000000000
 #topic: Split log into multi topics, each topic is a file. Here is 3 topics.
-topic=sys,lib,exe,nayax,sksgn
+#topic=sys,lib,exe,nayax,sksgn
+#trigger: Create a trigger thread
+trigger=20
+#ncpu=: Number of CPUs
+ncpu=20
 #end_configuring: Put in end of this file to read configuring file no more
 end_configuring=1
