Make a first release.

--- a/src/simplelog-win64-msvc-2022.cfg
+++ b/src/simplelog-win64-msvc-2022.cfg
@@ -19,7 +19,7 @@ rotation_size=20000000000
 # Topic Settings (Optional)
 # ------------------------------
 # Split logs into multiple topics (each topic is a separate file)
-topic=sys,lib,exe,nayax,sksgn
+#topic=sys,lib,exe,nayax,sksgn
 # ------------------------------
 # Device & System Settings
 # ------------------------------
