Make a first release.

--- a/src/simplelog.cfg
+++ b/src/simplelog.cfg
@@ -2,7 +2,7 @@
 # Log Settings
 # ------------------------------
 # Path folder to write logs
-pathfoder=C:/Users/your_account/Desktop/log_simple
+pathfoder=log_simple
 # Log level (0: SPL_LOG_BASE, 1: SPL_LOG_DEBUG, 2: SPL_LOG_INFO, 3: SPL_LOG_WARNING, 4: SPL_LOG_ERROR, 5: SPL_LOG_FATAL)
 level=0
 # ------------------------------
@@ -14,7 +14,7 @@ buffsize=200000
 # Rotation Settings
 # ------------------------------
 # Maximum size of each log file in bytes (min ~1MB, max ~2GB)
-rotation_size=20000000000
+rotation_size=2000000000
 # ------------------------------
 # Topic Settings (Optional)
 # ------------------------------
