--- a/src/simplelog-win64-msvc-2022.cfg
+++ b/src/simplelog-win64-msvc-2022.cfg
@@ -2,7 +2,7 @@
 # Log Settings
 # ------------------------------
 # Path folder to write logs
-pathfoder=C:/z/log_simple
+pathfoder=log_simple
 # Log level (0: SPL_LOG_BASE, 1: SPL_LOG_DEBUG, 2: SPL_LOG_INFO, 3: SPL_LOG_WARNING, 4: SPL_LOG_ERROR, 5: SPL_LOG_FATAL)
 level=0
 # ------------------------------
