--- a/src/linux/simplelog.cfg
+++ b/src/linux/simplelog.cfg
@@ -1,16 +1,37 @@
-#pathfoder: the folder to write log
+# ------------------------------
+# Log Settings
+# ------------------------------
+# Path folder to write logs
 pathfoder=log_simple
-#level:SPL_LOG_BASE:0, SPL_LOG_DEBUG:1, SPL_LOG_INFO:2, SPL_LOG_WARNING:3, SPL_LOG_ERROR:4, SPL_LOG_FATAL:5, SPL_LOG_PEAK:6
+# Log level (0: SPL_LOG_BASE, 1: SPL_LOG_DEBUG, 2: SPL_LOG_INFO, 3: SPL_LOG_WARNING, 4: SPL_LOG_ERROR, 5: SPL_LOG_FATAL)
 level=0
-#buffsize(byte): size of memory for simple log, 1(MB)
-buffsize=2000000
-#rotation_size(byte): size of each of log files, 10(MB)
+# ------------------------------
+# Buffer Settings
+# ------------------------------
+# Buffersize in bytes for each CPU/thread log (200KB per CPU/thread)
+buffsize=200000
+# ------------------------------
+# Rotation Settings
+# ------------------------------
+# Maximum size of each log file in bytes (min ~1MB, max ~2GB)
 rotation_size=2000000000
-#topic: Split log into multi topics, each topic is a file. Here is 3 topics.
+# ------------------------------
+# Topic Settings (Optional)
+# ------------------------------
+# Split logs into multiple topics (each topic is a separate file)
 #topic=sys,lib,exe,nayax,sksgn
-#trigger: Create a trigger thread
-trigger=20
-#ncpu=: Number of CPUs
-ncpu=20
-#end_configuring: Put in end of this file to read configuring file no more
+# ------------------------------
+# Device & System Settings
+# ------------------------------
+# Trigger: Create a separate trigger thread (in milliseconds). 
+# Set it to 0 for real-time logging on embedded devices, which means no trigger thread. 
+# For larger systems with heavy log volumes, set it to 1 or higher. This value represents the time interval (in milliseconds) at which the trigger thread will "tick".
+trigger=1
+# Number of CPUs/Threads in your system (e.g., 8 CPUs/16 threads on your PC)
+# For embedded devices, ncpu should be 1-2. For mainframes, it could be 24, 32, etc.
+ncpu=15
+# ------------------------------
+# End of Configuration File
+# ------------------------------
+# Make sure to place this at the end to signify the end of the config file.
 end_configuring=1
