--- a/src/linux/simplelog.cfg
+++ b/src/linux/simplelog.cfg
@@ -11,6 +11,12 @@ level=0
 # Buffersize in bytes for each CPU/thread log (200KB per CPU/thread)
 buffsize=200000
 # ------------------------------
+# Max size of a message
+# ------------------------------
+# If the size of the message is less than the number, it is safe to write. If not, it may be truncated.
+# Default is 10KB, should be 10%-20% of the buffer size.
+max_sz_msg=10000
+# ------------------------------
 # Rotation Settings
 # ------------------------------
 # Maximum size of each log file in bytes (min ~1MB, max ~2GB)
@@ -29,7 +35,7 @@ rotation_size=2000000000
 trigger=1
 # Number of CPUs/Threads in your system (e.g., 8 CPUs/16 threads on your PC)
 # For embedded devices, ncpu should be 1-2. For mainframes, it could be 24, 32, etc.
-ncpu=17
+ncpu=15
 # ------------------------------
 # End of Configuration File
 # ------------------------------
