Apply for MAC OSX.

--- a/src/simplelog.cfg
+++ b/src/simplelog.cfg
@@ -8,7 +8,7 @@ level=0
 # ------------------------------
 # Buffer Settings
 # ------------------------------
-# Buffersize in bytes for each CPU/thread log (200KB per CPU/thread)
+# Buffersize in bytes for each CPU-cores/threads log (200KB per CPU-cores/threads)
 buffsize=200000
 # ------------------------------
 # Max size of a message
@@ -33,7 +33,7 @@ topic=sys,lib,exe,nayax,sksgn
 # Set it to 0 for real-time logging on embedded devices, which means no trigger thread. 
 # For larger systems with heavy log volumes, set it to 1 or higher. This value represents the time interval (in milliseconds) at which the trigger thread will "tick".
 trigger=1
-# Number of CPUs/Threads in your system (e.g., 8 CPUs/16 threads on your PC)
+# Number of CPU-cores/Threads in your system (e.g., 8 CPU-cores/threads/16 threads on your PC)
 # For embedded devices, ncpu should be 1-2. For mainframes, it could be 24, 32, etc.
 ncpu=15
 # ------------------------------
