--- a/src/mach/Makefile
+++ b/src/mach/Makefile
@@ -3,7 +3,7 @@ debugFlag=-g -fPIC -Wall -shared
 releaseFlag=-fPIC -Wall -shared
 LIBS+=-lpthread
 src=../simplelog.c
-INC=-I../
+INC=-I../ -I../../include
 #CFLAGS=-ansi
 CFLAGS=-std=gnu89 -D UNIX_LINUX -D __MACH__
 #CPPFLAGS=-std=c++98 
@@ -11,13 +11,13 @@ CFLAGS=-std=gnu89 -D UNIX_LINUX -D __MACH__
 CPPFLAGS=-D UNIX_LINUX -D __UNIX_LINUX_CPP11_AND_NEWERS__ -D __MACH__
 
 debug:
-	gcc ${debugFlag} -o ${target} ${src} ${LIBS} ${CFLAGS}
+	gcc ${debugFlag} -o ${target} ${src} ${LIBS} ${CFLAGS} ${INC}
 	gcc -g -o simplelog_sample  ../c_test/main.c ${src} ${LIBS} ${INC} ${CFLAGS}
 	g++ -g -o simplelog_cpp_sample  ../cpp_test/main.cpp ${LIBS} ${CPPFLAGS} ${INC} -L./ -lsimplelog
 	g++ -g -o simplelog_cpp_direct_sample  ../cpp_test/main.cpp ${src} ${LIBS} ${INC} ${CPPFLAGS}
 
 release:
-	gcc ${releaseFlag} -o ${target} ${src} ${LIBS} ${CFLAGS}
+	gcc ${releaseFlag} -o ${target} ${src} ${LIBS} ${CFLAGS} ${INC}
 	gcc -o simplelog_sample  ../c_test/main.c ${src} ${LIBS} ${INC} ${CFLAGS}
 	g++ -o simplelog_cpp_sample  ../cpp_test/main.cpp ${LIBS} ${INC} ${CPPFLAGS} -L./ -lsimplelog
 	g++ -o simplelog_cpp_direct_sample  ../cpp_test/main.cpp ${src} ${LIBS} ${INC} ${CPPFLAGS}
