--- a/src/simplelog.cfg
+++ b/src/simplelog.cfg
@@ -36,6 +36,8 @@ trigger=1
 # Number of CPU-cores/Threads in your system (e.g., 8 CPU-cores/threads/16 threads on your PC)
 # For embedded devices, ncpu should be 1-2. For mainframes, it could be 24, 32, etc.
 ncpu=15
+# Only apply for MAC OSX, then it must need different key, others don't need.
+shared_key=__osx675745
 # ------------------------------
 # End of Configuration File
 # ------------------------------
