cmake: Add cmake_minimum_required and set it to 3.5 for CMake 4+ compatibility
Starting from CMake 4.0, compatibility with versions older than 3.5 has been removed.
Any project specifying a lower version will fail to configure with CMake 4.0 or newer. 3.5
is chosen as the minimum required version for compatibility.

Reference: https://cmake.org/cmake/help/latest/command/cmake_minimum_required.html

Signed-off-by: Alper Ak <alperyasinak1@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.5)
+
 # Add main.cpp file of the project root directory as a source file
 project(simplelog_topic_project)
 set(SOURCE_LIB_FILES src/simplelog.c )
