Apply for MSYS2;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,11 @@ if(DEFINED UNIX_LINUX)
 		target_compile_definitions(simplelog PUBLIC __MACH__=1)
 	endif()
 else()
+	if (DEFINED MSYS2_WIN)
+		target_compile_definitions(simple_cpp_example PUBLIC __UNIX_LINUX_CPP11_AND_NEWERS__=1 )
+	else()
+		
+	endif()
 	target_compile_definitions(simple_cpp_example PUBLIC _HAS_STD_BYTE=0)
 endif()
 
@@ -72,10 +77,13 @@ if(DEFINED UNIX_LINUX)
 	#target_compile_features(simplelog.c PRIVATE cxx_std_17)
 	#set(CMAKE_C_COMPILER g++)
 else()
-	add_executable(simple_cpp_example_direct ${SOURCE_BINCPP_FILES_DIRECT})
-	target_compile_definitions(simple_cpp_example_direct PRIVATE __SIMPLE_STATIC_LOG__=1)
-	target_compile_definitions(simple_cpp_example_direct PUBLIC _CRT_SECURE_NO_WARNINGS=1)
-	target_compile_definitions(simple_cpp_example_direct PUBLIC _HAS_STD_BYTE=0)
+	if (DEFINED MSYS2_WIN)
+	else()
+		add_executable(simple_cpp_example_direct ${SOURCE_BINCPP_FILES_DIRECT})
+		target_compile_definitions(simple_cpp_example_direct PRIVATE __SIMPLE_STATIC_LOG__=1)
+		target_compile_definitions(simple_cpp_example_direct PUBLIC _CRT_SECURE_NO_WARNINGS=1)
+		target_compile_definitions(simple_cpp_example_direct PUBLIC _HAS_STD_BYTE=0)
+	endif()
 endif()
 
 
