--- a/src/simplelog.cfg
+++ b/src/simplelog.cfg
@@ -38,6 +38,10 @@ trigger=1
 ncpu=15
 # Only apply for MAC OSX, then it must need different key, others don't need.
 shared_key=__osx675745
+# Mode straight [0, 1]
+# 0: Records in the same thread are not ordered — faster logging.
+# 1: Records in the same thread are ordered — slightly slower logging.
+mode_straight=0
 # ------------------------------
 # End of Configuration File
 # ------------------------------
